# SpoofGen

./: .gitignore  patcher.py  pyproject.toml  test.ipynb  train_conditional_generator.py  train_generator.py  train_generator_tensorboard.py
VAEGAN/: utils.py
VAEGAN/models/: generator.py
VAEGAN/models/backbone/: resnet.py  sagan.py
spoof_gen/: data_utils.py  logger.py  utils.py
spoof_gen/logging/: comet_utils.py
spoof_gen/models/: conditional_generator.py  critic.py  generator.py
spoof_gen/models/backbone/: iresnet.py  mobilenet.py  resnet.py  revnet.py  upblock.py
