[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spoof_gen"
version = "0.0.2"
authors = []
description = "Generate real and spoof face images from any face image"
readme = "README.md"
requires-python = ">=3.7"

dependencies = [
    "numpy",
    "opencv-python",
    "neptune-client",
    "lightning"
]
